IF(INSTALL_LOGO_SCRIPT OR INSTALL_MISC_SCRIPTS)
  INSTALL(PROGRAMS hmm.rb
    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
    )
ENDIF()

IF(INSTALL_LOGO_SCRIPT)
  INSTALL(PROGRAMS tikzlogo
    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
    )
ENDIF()

IF(INSTALL_MISC_SCRIPTS)
  INSTALL(PROGRAMS sl reldistplot.r hmm2meme
    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
    )
ENDIF()
