ADD_LIBRARY(discrover-logo OBJECT logo.cpp options.cpp cli.cpp)

ADD_EXECUTABLE(discrover-logo-bin main.cpp "${CMAKE_CURRENT_BINARY_DIR}/../GitSHA1.cpp")
SET_TARGET_PROPERTIES(discrover-logo-bin PROPERTIES OUTPUT_NAME discrover-logo)
TARGET_LINK_LIBRARIES(discrover-logo-bin discrover)

IF(GOOGLEPERFTOOLS_FOUND)
  TARGET_LINK_LIBRARIES(discrover-logo-bin ${PROFILER_LIBRARY} ${TCMALLOC_LIBRARY})
ENDIF()

INSTALL(TARGETS discrover-logo-bin
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION ${LIBDIR}
  ARCHIVE DESTINATION ${LIBDIR}/static
  DESTINATION "${CMAKE_INSTALL_PREFIX}"
  )
