ADD_LIBRARY(discrover-logo OBJECT logo.cpp options.cpp cli.cpp)

ADD_EXECUTABLE(discrover-logo-bin main.cpp)
SET_TARGET_PROPERTIES(discrover-logo-bin PROPERTIES OUTPUT_NAME discrover-logo)
TARGET_LINK_LIBRARIES(discrover-logo-bin discrover)

IF(COMPILER_SUPPORTS_PIC)
  SET_TARGET_PROPERTIES(discrover-logo
    PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
ENDIF()
IF(COMPILER_SUPPORTS_PIE)
  SET_TARGET_PROPERTIES(discrover-logo-bin
    PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
ENDIF()

IF(GOOGLEPERFTOOLS_FOUND)
  TARGET_LINK_LIBRARIES(discrover-logo-bin ${PROFILER_LIBRARY} ${TCMALLOC_LIBRARY})
ENDIF()

INSTALL(TARGETS discrover-logo-bin DESTINATION bin)
